# scatac-ldm-project

./: .gitignore  README.md  pyproject.toml  run_ldm.sh  run_peakvi.sh
ldm_marker_peaks/: annotate_peaks.py  centroid_distances.csv  marker_peaks_top50.csv  marker_peaks_top50_adj.csv  top10_marker_peaks.bed
plots/: multi_dim_table.txt  multi_seed_table.txt
scripts/: run_ablation.sh  run_dim16_final.sh  run_eval.sh  run_eval_dim16.sh  run_eval_dim16_v2.sh  run_ldm.sh  run_null.sh  run_null_nr70.sh  run_sweep.sh  run_tuned.sh  run_wd0.sh  smoke_test.py
src/: FiguresForData.py  download_peakvi.py  eval_peakvi.py  eval_peakvi.py.bak  eval_peakvi2.py.bak  evaluate.py  ldm.py  marker_peaks.py  plot_history.py  plot_ldm.py  plot_ldm_results.py  pyproject.toml  train.py  train_ldm.py  train_ldm.py.bak  train_ldm2.py.bak  train_ldm3.py.bak  train_null.py  train_peakvi.py.bak  visualize.py  visualize_null.py
src/HPC/: FiguresForData.py  evaluate.py  prepare_data.py  train.py  validate_embedding.py
src/local/: batch_analysis.py  check_dataset.py  eval_seeds.py  evaluate.py  generate_datasets.py  plot_ldm2.py  plot_seeds.py  print_results.py  run_ldm.sh  train.py  train_ldm.py  train_peakvi.py
src/zhen/: plot_peakvi.py  train_ldm.py
