[project]
name = "scatac-ldm"
version = "0.1.0"
description = "Latent Distance Models for sparse single-cell ATAC-seq data"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.24.0",
    "umap-learn>=0.5.0",
    "matplotlib>=3.7.0",
    "torch==2.4.0",
    "scvi-tools>=1.3.3",
    "leidenalg>=0.12.0",
    "cuml-cu11>=25.6.0",
    "cupy-cuda11x>=13.6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "ruff>=0.1.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
